<resources>
    <string name="app_name">Test-Demo</string>
    <string name="splash">splash</string>
    <string name="LoginModule">login</string>
    <string name="sstar">sstar</string>
    <string name="button">Button</string>
    <string name="main">hello</string>
    <string name="copyright">2020@copyright</string>
    <string name="user_head_image">user_head_image</string>
    <string name="username">用户名</string>
    <string name="username_hint" />
    <string name="usern_hint">请输入用户名</string>
    <string name="passwd">密码</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="register_module">register</string>
    <string name="test">test</string>
    <string name="email">邮箱</string>
    <string name="mail_hint">请输入有效邮箱</string>
    <string name="exit">退出登录</string>
    <string name="userprofile">userprofile</string>
    <string name="filename">文件名 :</string>
    <string name="ratio">比率 :</string>
    <string name="choose">选择</string>
    <string name="put">提交</string>
    <string name="hint_file">请选择转换文件</string>
    <string name="description">略缩图</string>
    <drawable name="clr_normal">#E53935</drawable>
    <drawable name="clr_pressed">#B30B33</drawable>
</resources>
